force-app/main/default/objects/sked_Travel_Time_Breakdown_Request__c/fields/sked_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>sked_Error_Log__c</fullName>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>