force-app/main/default/objects/sked_Travel_Time_Breakdown_Request__c/fields/sked_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Distance</fullName>
            </value>
            <value>
                <fullName>Travel Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>