force-app/main/default/objects/sked_Travel_Time_Breakdown_Request__c/fields/sked_Site_Ids__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Ids__c</fullName>
    <label>Site Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>