force-app/main/default/objects/sked_Travel_Time_Breakdown_Request__c/fields/sked_Travel_Time_Breakdown_Refresh_Item__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_Refresh_Item__c</fullName>
    <label>Travel Time Breakdown Refresh Queue Item</label>
    <referenceTo>sked_Travel_Time_Breakdown_Refresh_Item__c</referenceTo>
    <relationshipLabel>Travel Time Breakdown Refresh Request</relationshipLabel>
    <relationshipName>sked_Travel_Time_Breakdown_Request_Reqs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>