force-app/main/default/objects/sked_Travel_Time_Breakdown_Request__c/fields/sked_Travel_Time_Item_Ids__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Item_Ids__c</fullName>
    <label>Travel Time Item Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>