force-app/main/default/objects/sked_Travel_Time_Breakdown_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Site_Ids__c</columns>
    <columns>sked_Run_Id__c</columns>
    <columns>sked_Request_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>